--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+.flex1 {
+   
+
+
+}
+
 h2 {
     color: turquoise;
     text-align: center;
@@ -12,6 +18,29 @@ p {
     margin-left: 15%;
     margin-right: 15%;
     font-size: large;
+}
+
+#button1 {
+    background-color: white;
+    font-family: 'Courier New', Courier, monospace;
+    color: turquoise(43, 42, 42);
+    font-weight: 700;
+    font-size: medium;
+    border: none;
+    border-radius: 4px;
+    padding: 1px 10px;
+    text-decoration: none;
+    cursor: pointer;
+    border: 2px solid black;
+    transition-duration: 0.4s;
+    
+    
+}
+
+#button1:hover {
+    background-color: turquoise;
+    color: white;
+
 }
 
 .home {
